--- a/task27-10-15/MainPage.xaml
+++ b/task27-10-15/MainPage.xaml
@@ -1,4 +1,5 @@
-﻿<Page
+﻿
+    <Page
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:task27_10_15"
@@ -8,20 +9,49 @@
     x:Class="task27_10_15.MainPage"
     mc:Ignorable="d">
 
+    <!--<Page.Resources>
+        
+            <DataTemplate x:Key="LogoTemplate">
+                <Maps:Pushpin Name="ppp">
+                    <Maps:MapLayer.Position>
+                        <Maps:Location Latitude="{Binding Latitude}" Longitude="{Binding Longitude}"></Maps:Location>
+                    </Maps:MapLayer.Position>
+                </Maps:Pushpin>
+            </DataTemplate>
+        
+    </Page.Resources>-->
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
         <Maps:Map x:Name="map1" Credentials="AjCcoWr2LvcjAFgtUDd37BhBPN7iyzuMIwwJNUwTYdezKVqxikySr7xbXIijzkhX" HorizontalAlignment="Left" Margin="578,23,0,0" VerticalAlignment="Top" Height="724" Width="778">
             <Maps:Pushpin x:Name="pp1" />
+            <!--<Maps:Map.Children>
+                
+
+                <Maps:Pushpin />
+                    <Maps:MapItemsControl ItemTemplate="{StaticResource LogoTemplate}" ItemsSource="{Binding pushpinCollection}" >
+                </Maps:MapItemsControl>
+                    
+                    
+            </Maps:Map.Children>-->
+                 
+                    
         </Maps:Map>
         <ComboBox x:Name="comboplaces" HorizontalAlignment="Left" Margin="39,49,0,0" VerticalAlignment="Top" Width="178" Height="58" SelectionChanged="comboplaces_SelectionChanged">
-            <x:String>Hospitals</x:String>
-            <x:String>Schools</x:String>
-            <x:String>Fuel Stations</x:String>
-            <x:String>Parks</x:String>
-            <x:String>Temples</x:String>
-            <x:String>Dining Places</x:String>
-            <ComboBox Width="120"/>
+
         </ComboBox>
+        <ListView x:Name="gv1" HorizontalAlignment="Left" Margin="39,230,0,0" VerticalAlignment="Top" Width="480" Height="488" SelectionChanged="gv1_SelectionChanged">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+                        <TextBlock x:Name="tb" Text="{Binding Path=name}"></TextBlock>
+                        
+                        
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+            
+        </ListView>
         
     </Grid>
 </Page>
