--- a/task27-10-15/BlankPage1.xaml
+++ b/task27-10-15/BlankPage1.xaml
@@ -8,16 +8,18 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <GridView ItemsSource="{Binding Context}" x:Name="gv2"  HorizontalAlignment="Left" Margin="256,87,0,0" VerticalAlignment="Top" Width="770" Height="579">
+        <GridView x:Name="gv2"  HorizontalAlignment="Left" Margin="256,87,0,0" VerticalAlignment="Top" Width="770" Height="579">
             <GridView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <TextBlock Text="{Binding Path=results.name}"></TextBlock>
-                        <TextBlock Text="{Binding Path=results.opening_hours}"></TextBlock>
+                        <TextBlock Text="{Binding Path=name}" FontSize="24"></TextBlock>
+                        <TextBlock Text="{Binding Path=vicinity}" FontSize="24"></TextBlock>
+                        <TextBlock Text="{Binding Path=rating}"></TextBlock>
                     </StackPanel>
                 </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
+        <Button x:Name="btn" Content="&lt;&lt;" HorizontalAlignment="Left" Margin="62,61,0,0" VerticalAlignment="Top" Height="61" Width="112" FontSize="40" BorderThickness="0" Click="btn_Click"/>
 
     </Grid>
 </Page>
