--- a/task27-10-15/BlankPage1.xaml
+++ b/task27-10-15/BlankPage1.xaml
@@ -8,7 +8,8 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <GridView x:Name="gv2"  HorizontalAlignment="Left" Margin="256,87,0,0" VerticalAlignment="Top" Width="770" Height="579">
+        
+        <GridView x:Name="gv2"  HorizontalAlignment="Left" Margin="255,45,0,0" VerticalAlignment="Top" Width="770" Height="507">
             <GridView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
@@ -20,6 +21,8 @@
             </GridView.ItemTemplate>
         </GridView>
         <Button x:Name="btn" Content="&lt;&lt;" HorizontalAlignment="Left" Margin="62,61,0,0" VerticalAlignment="Top" Height="61" Width="112" FontSize="40" BorderThickness="0" Click="btn_Click"/>
+        <AppBarToggleButton HorizontalAlignment="Left" Icon="Favorite" Label="Add Favourite&#xD;&#xA;" Margin="109,619,0,0" VerticalAlignment="Top" Checked="AppBarToggleButton_Checked"/>
+        <TextBlock x:Name="tblock" HorizontalAlignment="Left" Margin="1080,20,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="70" Width="276" FontSize="25"/>
 
     </Grid>
 </Page>
