--- a/task27-10-15/MainPage.xaml
+++ b/task27-10-15/MainPage.xaml
@@ -37,7 +37,7 @@
                  
                     
         </Maps:Map>
-        <ComboBox x:Name="comboplaces" HorizontalAlignment="Left" Margin="39,49,0,0" VerticalAlignment="Top" Width="178" Height="58" SelectionChanged="comboplaces_SelectionChanged">
+        <ComboBox x:Name="comboplaces" HorizontalAlignment="Left" Margin="39,49,0,0" VerticalAlignment="Top" Width="178" Height="58" SelectionChanged="comboplaces_SelectionChanged" PlaceholderText="Select Category" FontSize="19">
 
         </ComboBox>
         <ListView x:Name="gv1" HorizontalAlignment="Left" Margin="39,230,0,0" VerticalAlignment="Top" Width="480" Height="488" SelectionChanged="gv1_SelectionChanged">
